--- a/public/html/chatPage.html
+++ b/public/html/chatPage.html
@@ -35,8 +35,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                    <a class="nav-item nav-link" href="userPage.html" id="link">User Home <span
                             class="sr-only">(current)</span></a>
+                    <span class="nav-item nav-link logoutBtn" id="link">Logout <span
+                            class="sr-only">(current)</span></span>
                     <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;">Features</a>
                 </div>
             </div>
@@ -208,6 +210,7 @@
                 url: 'https://tokyochatappdb.herokuapp.com/messagesSent',
                 data: msgData
             })
+            document.getElementById("wellBody").innerHTML = '';
             popMsg();
             clear()
         })
@@ -243,6 +246,12 @@
             }
 
             return res;
+        }
+
+        window.onclick = function (e) {
+            if (e.target !== $('.navbar-collapse')) {
+                $(".navbar-collapse").removeClass('show');
+            }
         }
     </script>
 </body>
