--- a/public/html/editProfile.html
+++ b/public/html/editProfile.html
@@ -35,8 +35,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link logoutBtn" href="#" id="link">Home <span
+                    <a class="nav-item nav-link" href="userPage.html" id="link">User Home <span
                             class="sr-only">(current)</span></a>
+                    <span class="nav-item nav-link logoutBtn" id="link">Logout <span
+                            class="sr-only">(current)</span></span>
                     <a class="nav-item nav-link" href="../index.html" style="display: none;">Features</a>
                 </div>
             </div>
@@ -196,6 +198,17 @@
 
 
         )
+
+        window.onclick = function (e) {
+            if (e.target !== $('.navbar-collapse')) {
+                $(".navbar-collapse").removeClass('show');
+            }
+        }
+        $("body").click(e => {
+            $(".navbar-collapse").removeClass('show');
+            $(".navbar-collapse").addClass('collapse');
+        })
+
 
         function getUserDetails() {
             $('#password').val(`${userDetails.password}`);
