--- a/public/html/ChatRoom.html
+++ b/public/html/ChatRoom.html
@@ -35,9 +35,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="../index.html" id="link">Home <span
+                    <a class="nav-item nav-link" href="userPage.html" id="link">User Home <span
                             class="sr-only">(current)</span></a>
-
+                    <span class="nav-item nav-link logoutBtn" id="link">Logout <span
+                            class="sr-only">(current)</span></span>
+                    <a class="nav-item nav-link" href="../index.html" id="index" style="display: none;"></a>
                 </div>
             </div>
         </nav>
@@ -245,6 +247,8 @@
             })
 
         })
+
+
 
 
         function disableSend() {
