--- a/public/html/ChatRoom.html
+++ b/public/html/ChatRoom.html
@@ -279,6 +279,7 @@
                 url: 'https://tokyochatappdb.herokuapp.com/roomMessages',
                 data: msgData
             })
+            document.getElementById("wellBody").innerHTML = '';
             popRoomMsg();
             clear();
         })
